<resources>
    <string name="app_name">EasyTimes</string>
    <string name="easy_times">EASY TIMES</string>
    <string name="title_activity_password">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="imagen">Imagen</string>
    <string name="pin_introducido_incorrecto">Pin introducido incorrecto</string>
    <string name="_00_00">00:00</string>
    <string name="_02_08_2018">02/08/2018</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registro">Registro</string>
    <string name="d_n_i">D.N.I</string>
    <string name="crear">Crear</string>
    <string name="dni">DNI</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="contrase_a">Contraseña</string>
    <string name="rol">Rol</string>
    <string name="telefono">Telefono</string>
</resources>
