<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.RegistroActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnCrear"
        android:layout_below="@+id/toolbar"
        android:padding="8dp"
        tools:ignore="UnknownIdInLayout">

        <ScrollView
            android:id="@+id/scr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:id="@+id/rel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edtDni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/dni"
                    android:inputType="textCapSentences|textPersonName"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/edtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtDni"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/nombre"
                    android:inputType="textCapSentences|textPersonName"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/edtApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtNombre"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/apellido"
                    android:inputType="textCapSentences|textPersonName"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/edtContra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtApellido"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/edtRol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtContra"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/rol"
                    android:inputType="textCapSentences|textPersonName"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/edtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtRol"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/telefono"
                    android:inputType="textCapSentences|phone"
                    tools:ignore="Autofill" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
    <Button
        android:id="@+id/btnCrear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/crear"
        android:textColor="@color/white" />

</RelativeLayout>