<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Vista.PasswordActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="500dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />
        <RelativeLayout
            android:id="@+id/relClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:elevation="8dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp">

            <TextClock
                android:id="@+id/txtHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="-10dp"
                android:layout_marginTop="-5dp"
                android:format24Hour="HH:mm"
                android:text="@string/_00_00"
                android:textColor="@color/colorWhite"
                android:textSize="38sp"
                android:typeface="sans" />

            <TextClock
                android:id="@+id/txtFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtHora"
                android:layout_centerHorizontal="true"
                android:format24Hour="dd/MM/yyyy"
                android:text="@string/_02_08_2018"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relPad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rel"
            android:layout_below="@+id/relClock">
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



                <AutoCompleteTextView
                    android:id="@+id/dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/d_n_i"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorWhite"
                    android:textColorLink="@color/colorWhite" />



                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeActionId="6"

                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorWhite"
                    android:textColorLink="@color/colorWhite"
                    tools:ignore="Autofill" />



            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:textStyle="bold" />

            <Button
                android:id="@+id/email_registrer"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/registro"
                android:textStyle="bold" />
            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorWhite"
                android:indeterminateTintMode="src_atop" />

        </LinearLayout>


    </ScrollView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imgFinger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:elevation="8dp"
                app:srcCompat="@drawable/ic_report"
                android:contentDescription="@string/imagen" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imgFinger"
                android:elevation="8dp"
                android:text="@string/pin_introducido_incorrecto"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>